--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -21,7 +21,7 @@
         android:layout_above="@id/artist_tv"
         android:maxLines="1"
         android:ellipsize="end"
-        android:textSize="16sp" />
+        android:textSize="@dimen/normal_text_size" />
 
     <TextView
         android:id="@+id/artist_tv"
