ViewPager and all Single Screen RecyclerViews are set up; Library parsing function is complete.
Next Steps:
- Now Playing fragment
- OnClickListeners on Artist/Album/Song RecyclerViews

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,16 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/song_list_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
-    </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
-
-    <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/artist_list_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
 </LinearLayout>
