--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="horizontal_margin">16dp</dimen>
     <dimen name="normal_text_size">16sp</dimen>
+    <dimen name="margin_bottom">4dp</dimen>
 </resources>
